Fixed visibility issues

--- a/styles/languages/css.less
+++ b/styles/languages/css.less
@@ -44,7 +44,7 @@
 
         &.syntax--section {
             &.syntax--bracket {
-                color: @dark-gray;
+                color: @light-gray;
             }
         }
     }
