--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -1,12 +1,12 @@
 .syntax--js {
     &.syntax--constant {
-        color: @very-dark-gray;
+        color: @very-light-gray;
     }
 
     &.syntax--support {
         &.syntax--variable {
             &.syntax--property {
-                color: @very-dark-gray;
+                color: @very-light-gray;
             }
             &.syntax--property.syntax--dom {
                 color: @blue;
@@ -31,7 +31,7 @@
             color: @blue;
         }
         &.syntax--other.syntax--object {
-            color: @very-dark-gray;
+            color: @very-light-gray;
         }
         &.syntax--other.syntax--object.syntax--property {
             color: @blue;
