--- a/styles/languages/swift.less
+++ b/styles/languages/swift.less
@@ -5,7 +5,7 @@
         }
 
         .syntax--operator {
-            color: @very-dark-gray;
+            color: @very-light-gray;
         }
     }
 
